[gd_scene load_steps=9 format=3 uid="uid://cksnl04pc7yvb"]

[ext_resource type="Script" uid="uid://dn207hxjbhvc6" path="res://scenes/levels/level_2.gd" id="1_g2h2n"]
[ext_resource type="Texture2D" uid="uid://b7kgtid77ujsi" path="res://assets/level2_baggrund.png" id="1_j2425"]
[ext_resource type="PackedScene" uid="uid://csv8ovvh1udk0" path="res://scenes/levels/level_2_frames/framelvl2.tscn" id="3_ra442"]
[ext_resource type="PackedScene" uid="uid://dp82u08lmt0vj" path="res://scenes/levels/level_2_frames/framelvl2_2.tscn" id="4_8qukl"]
[ext_resource type="PackedScene" uid="uid://bls5gqavwlnd8" path="res://scenes/scene_item.tscn" id="4_ibugp"]
[ext_resource type="PackedScene" uid="uid://bop04jj0xm507" path="res://scenes/heart.tscn" id="5_8qukl"]
[ext_resource type="PackedScene" uid="uid://7g4tohppxvhc" path="res://scenes/game_over.tscn" id="6_3p04p"]
[ext_resource type="Texture2D" uid="uid://155n6lsnq26k" path="res://assets/question_mark.png" id="7_qsp8v"]

[node name="Node" type="Node"]
script = ExtResource("1_g2h2n")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_j2425")

[node name="Check" type="Button" parent="."]
offset_left = 334.0
offset_top = 182.0
offset_right = 389.0
offset_bottom = 211.0
focus_mode = 0
flat = true

[node name="Frame" parent="." instance=ExtResource("3_ra442")]
position = Vector2(24, 39)

[node name="Frame2" parent="." instance=ExtResource("4_8qukl")]
position = Vector2(142, 38)

[node name="SceneItem" parent="." instance=ExtResource("4_ibugp")]
position = Vector2(240, 202)

[node name="SceneItem2" parent="." instance=ExtResource("4_ibugp")]
position = Vector2(265, 202)
back_index = 1
item_frame = 1

[node name="SceneItem3" parent="." instance=ExtResource("4_ibugp")]
position = Vector2(291, 202)
item_frame = 2

[node name="Area2D" parent="SceneItem3" index="1"]
collision_layer = 2
collision_mask = 2

[node name="SceneItem4" parent="." instance=ExtResource("4_ibugp")]
position = Vector2(316, 202)
char_index = 1
item_frame = 3

[node name="Area2D" parent="SceneItem4" index="1"]
collision_layer = 2
collision_mask = 2

[node name="GameOver" parent="." instance=ExtResource("6_3p04p")]
visible = false

[node name="Question1" type="TextureRect" parent="."]
offset_left = 143.0
offset_top = 38.0
offset_right = 257.0
offset_bottom = 104.0
texture = ExtResource("7_qsp8v")
stretch_mode = 3

[node name="Question2" type="TextureRect" parent="."]
offset_left = 261.0
offset_top = 36.0
offset_right = 375.0
offset_bottom = 102.0
texture = ExtResource("7_qsp8v")
stretch_mode = 3

[node name="Question3" type="TextureRect" parent="."]
offset_left = 25.0
offset_top = 109.0
offset_right = 139.0
offset_bottom = 175.0
texture = ExtResource("7_qsp8v")
stretch_mode = 3

[node name="Question4" type="TextureRect" parent="."]
offset_left = 141.0
offset_top = 110.0
offset_right = 255.0
offset_bottom = 176.0
texture = ExtResource("7_qsp8v")
stretch_mode = 3

[node name="Question5" type="TextureRect" parent="."]
offset_left = 262.0
offset_top = 109.0
offset_right = 376.0
offset_bottom = 175.0
texture = ExtResource("7_qsp8v")
stretch_mode = 3

[node name="Label" type="Label" parent="."]
offset_left = 9.0
offset_top = 185.0
offset_right = 218.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(0.12156863, 0.12156863, 0.09803922, 1)
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 7
autowrap_mode = 3
clip_text = true

[node name="Heart" parent="." instance=ExtResource("5_8qukl")]
position = Vector2(314, 21)
scale = Vector2(0.75, 0.75)

[connection signal="pressed" from="Check" to="." method="_on_check_pressed"]

[editable path="SceneItem3"]
[editable path="SceneItem4"]
